BB-4595: Add JavaScript behavior for shopping lists popup - Fixed qty inputs - Fixed vertical-align in lists grid

--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-lists-modify/shopping-lists-modify.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-lists-modify/shopping-lists-modify.scss
@@ -26,6 +26,7 @@
 
     &__input {
         width: 50px;
+        padding: 7px 9px;
     }
 
     &__select {
