--- a/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-lists-popup/shopping-lists-popup.scss
+++ b/src/Oro/Bundle/ShoppingListBundle/Resources/public/default/scss/components/shopping-lists-popup/shopping-lists-popup.scss
@@ -21,6 +21,7 @@ $shopping-lists-popup-offset: 15px;
     &__list,
     &__quantity {
         display: inline-block;
+        vertical-align: top;
     }
 
     &__list {
